// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Refova /> renders and pass down props 1`] = `
<Form
  changed={Array []}
  email="example@email.com"
  errors={
    Object {
      "email": "Domain is not allowed",
      "password": "Password should be at least 6 chars length",
    }
  }
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  isValid={false}
  password="qwer"
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  username=""
  validate={[Function]}
  values={
    Object {
      "email": "example@email.com",
      "password": "qwer",
      "username": "",
    }
  }
/>
`;

exports[`<Refova /> renders without options 1`] = `
<Form
  changed={Array []}
  errors={Object {}}
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  isValid={false}
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  validate={[Function]}
  values={Object {}}
/>
`;
